--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,6 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
   "pylint",
-  "flake8"
+  "flake8",
+  "office365-rest-python-client==2.5.14",
 ]
